change tests so they dont open up windows